--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "Final project for AI bootcamp",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "dev": "nodemon index.js",
+    "start": "node index.js"
   },
   "repository": {
     "type": "git",
@@ -18,7 +19,9 @@
   },
   "homepage": "https://github.com/ksenia-ekshova/final-project-ai-bootcamp#readme",
   "dependencies": {
-    "node-telegram-bot-api": "^0.65.1"
+    "node-telegram-bot-api": "^0.65.1",
+    "nodemon": "^3.1.0",
+    "openai": "^4.38.2"
   },
   "devDependencies": {
     "ngrok": "^5.0.0-beta.2"
