--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   },
   "homepage": "https://github.com/ksenia-ekshova/final-project-ai-bootcamp#readme",
   "dependencies": {
+    "dotenv": "^16.4.5",
     "node-telegram-bot-api": "^0.65.1",
     "nodemon": "^3.1.0",
     "openai": "^4.38.2"
